# namedviz

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  wsgi.py
.claude/: settings.local.json
namedviz/: api.py  app.py  graph.py  models.py
namedviz/parser/: extractor.py  grammar.py  loader.py
namedviz/static/: index.html
namedviz/static/css/: style.css
namedviz/static/js/: app.js  export.js  graph.js  legend.js
sample_configs/server1/: named.conf  named.conf_org
sample_configs/server2/: named.conf
sample_configs/server3/: named.conf
sample_configs/server4/: named.conf  named.conf.internal-zones  named.conf.views
sample_configs/server4/named/: named.conf.external-zones
tests/: test_api.py  test_extractor.py  test_grammar.py  test_graph.py  test_loader.py
tests/confdata/basic/: named.conf
tests/confdata/view_with_options/: named.conf
tests/confdata/views_with_includes/: external-zones.conf  internal-zones.conf  named.conf
tests/confdata/with_abs_include/: named.conf  zones.conf
tests/confdata/with_commented_include/: named.conf
tests/confdata/with_comments/: named.conf
tests/confdata/with_include/: named.conf  zones.conf
tests/confdata/with_key_allow_transfer/: named.conf
tests/confdata/with_logging/: named.conf
tests/confdata/with_missing_include/: named.conf
tests/confdata/with_notify_source/: named.conf
tests/confdata/with_views/: named.conf
